feat: finished bounding box cropping for BYOD

--- a/BringYourOwnDocument.ipynb
+++ b/BringYourOwnDocument.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,27 +447,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4032, 1908)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "thresh.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,17 +488,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "231\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# left\n",
     "left = middle_column\n",
@@ -538,17 +519,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1818\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# right\n",
     "right = middle_column\n",
@@ -576,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,23 +557,15 @@
     "    left -= 50\n",
     "if right < width-50:\n",
     "    right += 50\n",
-    "crop_img = thresh[0:height, left:right]\n",
+    "crop_img = thresh[:height, left:right]\n",
     "cv2.imwrite(\"test.png\", crop_img);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "473\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# top\n",
     "top = middle_row\n",
@@ -635,7 +600,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# top\n",
+    "end = crop_img.shape[0]\n",
+    "cnt = 0\n",
+    "top = end-1\n",
+    "#maxi = crop_img.shape[1]\n",
+    "values = []\n",
+    "while cnt < top:\n",
+    "    #print(bottom, sum(crop_img[bottom]))\n",
+    "    if sum(crop_img[cnt]) == 0:\n",
+    "        values.append(cnt)\n",
+    "    else:\n",
+    "        values.append(0)    \n",
+    "    cnt += 1\n",
+    "    \n",
+    "idx = [i for i,x in enumerate(values) if x != 0]\n",
+    "top = min(idx)\n",
+    "print(top)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,22 +651,25 @@
     "        values.append(cnt)\n",
     "    else:\n",
     "        values.append(0)    \n",
-    "    cnt += 1"
+    "    cnt += 1\n",
+    "\n",
+    "bottom = max(values)\n",
+    "print(bottom)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "crop_img = crop_img[0:max(values), 0:crop_img.shape[1]]\n",
+    "crop_img = crop_img[:bottom, :]\n",
     "cv2.imwrite(\"test.png\", crop_img);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,17 +690,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 limited  partners. Is it any wonder that learnin in en (re.  preneurial and managerial circles? Yet if the fundamental goal of entre In Organization building under condi tainty, its most vital function is learn truth about which elements of our strategy are working to re. alize our vision and which are just crazy. We must learn what customers really want, not what they say they want or what we think they should want. We must discover whether we are ona path that will lead to growing a sustainable business. | In the Lean Startup model, we are rehabilitating learning with a concept I call validated learning. Validated learning 1s not after-the-fact rationalization or a good story designed to hide failure. It is a rigorous method for demonstrating progress when one is embedded in the soil of extreme uncertainty in which startups grow. Validated Icarning is the process of demonstrating empirically that a team has discovered valuable truths about 2 Sstartup’s present and future business prospects. It is more con- crete, more accurate, and faster than market forecasting or clas-  sical business planning. It is the Principal antidote to the lethal  problem of achieving failure: successfully executing a plan that leads nowhere.  £ has a bad Name  Preneurship is to eNpape tions of extreme uncer- ing. We must learn the  VALIDATED LEARWING AT IMVU  Let me illustrate this with an example from my career. Many . , , . . audiences have heard me recount the story of IMVU's tounding\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = pytesseract.image_to_string(thresh)\n",
     "text = re.sub(\"\\n\", \" \", text)\n",
@@ -868,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,30 +862,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = \"page2.jpg\"\n",
+    "file = \"page6.jpg\"\n",
     "text = bringyourowndocument(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"finer is one ol the fastest-growing companies of all time. Its name comes from “group coupons,” an ingenious idea that has spawned an entire industry of social commerce imitators. However, it didnt start out successful. When customers took Groupon up on its first deal, a whopping twenty people bought two-for-one pizza in a restaurant on the first floor of the company’s Chicago offices—hardly a world-changing event.  In fact, Groupon wasn't originally meant to be about commerce at all. The founder, Andrew Mason, intended his company to become a “collective activism platform” called The Point. Its goal was to bring people together to solve problems they couldn’t solve on their own, such as fund-raising for a cause or boycotting a certain retailer. The Point's early results were disappointing, however, and at the end of 2008 the founders decided to try something new. Although they still had grand ambitions, they were determined to keep the new product simple. They built a minimum viable product. Does  this sound like a billion-dollar company to you? Mason tells the story:  We took a WordPress Blog and we skinned it to say Groupon and then every day we would do a new post. It was totally ghetto. We would sell T-shirts on the first\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "• When customers took Groupon up on its first deal, a whopping twenty people bought two-for-one pizza in a restaurant on the first floor of the company’s Chicago offices—hardly a world-changing event. \n",
+      "\n",
+      "• The founder, Andrew Mason, intended his company to become a “collective activism platform” called The Point. \n",
+      "\n",
+      "• Its goal was to bring people together to solve problems they couldn’t solve on their own, such as fund-raising for a cause or boycotting a certain retailer. \n",
+      "\n",
+      "• The Point's early results were disappointing, however, and at the end of 2008 the founders decided to try something new. \n",
+      "\n",
+      "• Mason tells the story:  We took a WordPress Blog and we skinned it to say Groupon and then every day we would do a new post. \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "summarisepdfdocument(text)"
+    "summary = summarisepdfdocument(text)\n",
+    "for i in summary:\n",
+    "    print(i, \"\\n\")"
    ]
   },
   {
