fix: adding try except blocks to APIs to improve debugging and robustness

--- a/WordCloudAPI.ipynb
+++ b/WordCloudAPI.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,11 +200,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "words = wordcloud(\"neural network\", corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "learner\n",
+      "data\n",
+      "function\n",
+      "set\n",
+      "teaching\n",
+      "time\n",
+      "learning\n",
+      "control\n",
+      "color\n",
+      "hypothesis\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in words:\n",
+    "    print(i)"
    ]
   },
   {
@@ -216,29 +243,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "workload\n",
-      "function\n",
-      "time\n",
-      "learner\n",
-      "teaching\n",
-      "hypothesis\n",
-      "set\n",
-      "data\n",
-      "service\n",
-      "color\n"
+      "l  -  e\n",
+      "d  -  a\n",
+      "f  -  u\n",
+      "s  -  e\n",
+      "t  -  e\n",
+      "t  -  i\n",
+      "l  -  e\n",
+      "c  -  o\n",
+      "c  -  o\n",
+      "h  -  y\n"
      ]
     }
    ],
-   "source": [
-    "for i in words:\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "for word in words:\n",
     "    print(word[0], \" - \", word[1])"
