--- a/SummariseAPI.ipynb
+++ b/SummariseAPI.ipynb
@@ -370,7 +370,7 @@
    "outputs": [],
    "source": [
     "#pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
-    "pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
     "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
@@ -383,27 +383,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = pdfdocumentextracter(pdfurl)"
+    "# graphene\n",
+    "pdfurl = \"http://arxiv.org/pdf/1111.2286v1\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = pdfdocumentextracter(pdfurl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "• I describe an optimal control view of adversarial machine learning, where the dynamical system is the machine learner, the input are adversarial actions, and the control costs are deﬁned by the adversary’s goals to do harm and be hard to detect. \n",
+      "• Results show that, depending on the graphene-substrate adhesion, number of graphene layers and substrate stiffness, graphene exhibits two distinct types of morphology: I) graphene remains bonded to the substrate and corrugates to an amplitude up to that of the substrate surface patterns; II) graphene debonds from the substrate and remains flat on top of the substrate surface patterns. \n",
       "\n",
-      "• The system to be controlled is called the plant, which is deﬁned by the system dynamics: where xt ∈ Xt is the state of the system, ut ∈ Ut is the control input, and Ut is the control constraint set. \n",
+      "• Although a theoretical model is offered to calculate the deformation in the graphene-substrate system, the bending rigidity of few-layer graphene is over- estimated and the tension in graphene is neglected.. To overcome the limitations of existing models, we establish a generalized analytic model to explicitly determine the morphology of mono-layer and few-layer graphene regulated by the patterned surface of a compliant elastic compliant substrate with patterned surface and possible resulting structures. \n",
       "\n",
-      "• In all cases, the adversary attempts to control the machine learning system, and the control costs reﬂect the adversary’s desire to do harm and be hard to detect. \n",
+      "• An n-layer graphene (n ≥ 1) fabricated on a stiff and smooth mother wafer (e.g., silica for mechanically exfoliated graphene or copper for chemically grown graphene) is brought in contact with a compliant substrate (e.g., polymer or elastomer) with patterned surface, pressure is then applied to guarantee the full contact between the graphene and the substrate (e.g., the patterned surface is flattened under pressure). \n",
       "\n",
-      "• The adversary’s running cost gt then measures the eﬀort in performing the action at step t. One limitation of the optimal control view is that the action cost is assumed to be additive over the steps. \n",
+      "• The resulting morphology of the graphene on the patterned surface of the compliant substrate is dictated by the competition between the graphene-substrate adhesion energy and the strain categorized into two types: energy in the graphene-substrate laminate. \n",
       "\n",
-      "• The adversary intercepts the environmental reward rIt in each iteration, and may choose to modify (“shape”) the reward into with some ut ∈ R before sending the modiﬁed reward to the learner. \n",
+      "• Two distinct types of graphene morphology emerge from the results: Type I) graphene remains bonded to the substrate and corrugates to an amplitude up to that of the substrate surface patterns; Type II) graphene debonds from the substrate and remains flat on top of the substrate surface patterns. \n",
       "\n"
      ]
     }
@@ -412,6 +422,15 @@
     "summary = summarisepdfdocument(text)\n",
     "for i in summary:\n",
     "     print(i, \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fir"
    ]
   },
   {
